--- a/.gitignore
+++ b/.gitignore
@@ -509,4 +509,26 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/reactnative,visualstudiocode,windows,macos,linux
+# End of https://www.toptal.com/developers/gitignore/api/reactnative,visualstudiocode,windows,macos,linux# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
